Primitive restart models

--- a/Source/AssetGenerator.csproj
+++ b/Source/AssetGenerator.csproj
@@ -34,6 +34,7 @@
     <None Remove="ReadmeTemplates\Material_SpecularGlossiness.md" />
     <None Remove="ReadmeTemplates\Mesh_PrimitiveAttribute.md" />
     <None Remove="ReadmeTemplates\Mesh_PrimitiveMode.md" />
+    <None Remove="ReadmeTemplates\Mesh_PrimitiveRestart.md" />
     <None Remove="ReadmeTemplates\Mesh_Primitives.md" />
     <None Remove="ReadmeTemplates\Mesh_PrimitivesUV.md" />
     <None Remove="ReadmeTemplates\Mesh_PrimitiveVertexColor.md" />
@@ -57,6 +58,7 @@
     <EmbeddedResource Include="ReadmeTemplates\Material_Mixed.md" />
     <EmbeddedResource Include="ReadmeTemplates\Material_SpecularGlossiness.md" />
     <EmbeddedResource Include="ReadmeTemplates\Mesh_PrimitiveMode.md" />
+    <EmbeddedResource Include="ReadmeTemplates\Mesh_PrimitiveRestart.md" />
     <EmbeddedResource Include="ReadmeTemplates\Mesh_Primitives.md" />
     <EmbeddedResource Include="ReadmeTemplates\Mesh_PrimitivesUV.md" />
     <EmbeddedResource Include="ReadmeTemplates\Animation_Node.md" />
